Bangalore_Food_Analysis.ipynb

--- a/Bangalore_Food_Analysis.ipynb
+++ b/Bangalore_Food_Analysis.ipynb
@@ -139,7 +139,7 @@
    "metadata": {},
    "source": [
     "## Conclusion\n",
-    "This analysis provides a basic understanding of Bengaluru's food trends. It is a fresher-level project showing how Python, Excel, and SQL can be combined for data analytics."
+    "This analysis provides a basic understanding of Bengaluru's food trends. This project showing how Python, Excel, and SQL can be combined for data analytics."
    ]
   }
  ],
